# rdifffs

./: LICENSE  Makefile  RDiffBackupFS.hs  RDiffBackupFS.lhs  RDiffFS.cabal  RDiffFS.hs  README  README.md  Rdiff.hs  RdiffBackup.lhs  RdiffFS.hs  Test.hs  archfs3.hs  incfstat.hs  incfstat2.hs  main.hs  parse.hs  pureincrementReadDirectory.hs  rdifffs.cabal  rdifffs.hs  rdifffs.lhs  take.hs  temp.hs
util/: grepCopy.hs
