Name:  RDiffFS
Version: 0.1
Synopsis: virtual filesystem for exploring rdiff-backup backups
Author: Jon Dowland <jon@dowland.me>
Maintainer: Jon Dowland <jon@dowland.me>
Cabal-Version: >= 1.2
build-type: Simple
Executable rdifffs
  Main-is:         rdifffs.lhs
  Build-Depends:   base >= 2.0, MissingH >= 1.1.0.3,
                   parsec >= 2.1.0.1, haskell98 >= 1.0.1.1,
                   HFuse >= 0.2.3, bytestring >= 0.9.1.5,
                   zlib >= 0.5.2.0, unix >= 2.4.0.0,
                   regex-posix >= 0.94.1, filepath >= 1.1.0.3,
                   directory >= 1.0.1.0
